想知道嗎第三版

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8">
     <title>goodidea</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel=stylesheet type=text/css href=https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css>
+    <!-- <link rel="icon" type="image/png" href="src/assets/goodidealogo.png" /> -->
+    <link rel="icon" href="src/assets/goodidealogo.ico" type="image/x-icon" />
   </head>
   <body>
     <div id="app"></div>
